cabal-version:      3.4
name:               sidh
version:            0.1.0.0
synopsis:           SIDH cryptographic primitives, elliptic curves algorithms and finite fields.
license:            GPL

author:             pablf
build-type:         Simple


extra-source-files: CHANGELOG.md

library
    exposed-modules:
      SIDH.Field
      SIDH.Keys
      SIDH.EC
      SIDH.NatList
      SIDH.Protocol
      
    default-extensions: DataKinds
                      , UndecidableInstances                 
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   src
    default-language: Haskell2010


test-suite sidh-tests
    main-is:          Test.hs
    type:             exitcode-stdio-1.0
    build-depends:
      , QuickCheck
      , sidh
    hs-source-dirs:   test
    default-language: Haskell2010
    
executable example
    main-is:          Example.hs
    hs-source-dirs:   example
    build-depends:    sidh
    default-language: Haskell2010
