cabal-version:      3.4
name:               sidh
version:            0.1.0.0
synopsis:           SIDH cryptographic primitives, elliptic curves algorithms and finite fields.
license:            GPL-2.0-or-later
license-file:       LICENSE
author:             pablf
build-type:         Simple
extra-doc-files:    CHANGELOG.md

library
    exposed-modules:
      SIDH.Field
      SIDH.Keys
      SIDH.EC
      SIDH.NatList
      SIDH.Protocol
                     
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   src
    default-language: GHC2021


test-suite sidh-tests
    main-is:          Test.hs
    type:             exitcode-stdio-1.0
    build-depends:
      ,  base ^>=4.16.4.0
      , QuickCheck
      , sidh
    hs-source-dirs:   test
    default-language: GHC2021
    
executable example
    main-is:          Example.hs
    hs-source-dirs:   example
    build-depends:    sidh, base ^>=4.16.4.0
    default-language: GHC2021
